# dotfiles

./: .bashrc  .cliff.toml  .dprint.jsonc  .editorconfig  .gitignore  .ignore  .prettierignore  .profile  .stow-local-ignore  .stylua.toml  .typos.toml  BOOKMARKS.md  CHANGELOG.md  LICENSE  Makefile  README.md  WHY.md  biome.json  bombadil.toml  cliff.toml  justfile  release  release.sh  setup  setup.sh
.dotter/: global.toml  local.example.toml  post_deploy.sh
.dotter/include/: arch.toml  debian.toml  fedora.toml
_docs/: install.md  optionals.md
_scripts/: mypy  python-tools  release  release.py
bash/: .bash_aliases  .bash_profile  .bash_prompt  .bashrc  .exports  .functions  .inputrc  .profile
cli/xtool/: Cargo.toml  justfile
cli/xtool/src/: backup.rs  cname.rs  ding.rs  main.rs  ports.rs  sfetch.rs  termhere.rs  upgrade.rs
configs/: cliff.toml  dprint.json  stylua.toml
copyq/: dracula.ini
docs/: install.md  post-install.md
git/: .gitconfig  .gitconfig.bgn  .gitignore
gnome-terminal/: profile.dconf
gogh/: Dracula.yml
gtk/: .gtkrc-2.0
hg/: .hgrc
sbcl/: .sbclrc
scripts/: ci_prepare  ci_rust  ci_sh  release.py  release.sh
tmux/: .tmux.conf
utils/snacks/: Cargo.toml  justfile
utils/snacks/src/: clean.rs  container_name.rs  emojis.rs  git_gone.rs  main.rs  names.rs  ports.rs  quotes.rs  termhere.rs  up.rs  utils.rs
vi/: .vimrc
vimium/: config
x/: .Xresources  .keymap  .xinitrc  .xmodmap  .xsessionrc
xresources/: .Xresources
xtool/: Cargo.toml  justfile
xtool/src/: age.rs  backup.rs  clean.rs  cname.rs  ding.rs  install.rs  main.rs  names.rs  ports.rs  sfetch.rs  tax_import.rs  termhere.rs  uninstall.rs  update.rs  upgrade.rs
zsh/: .zshenv
(+324 files in other folders)
