[package]
name = "xtool"
version = "0.0.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
anyhow = "1"
duct = "0.13.6"
pico-args = "0.5.0"

# age
humantime = "2"
time = { version = "0.3", features = ["formatting", "local-offset", "parsing"] }

# names
rand = "0.8"

# clean
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
