[package]
name = "xtool"
version = "0.0.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
anyhow = "1"
clap = { version = "4.4.18", features = ["derive"] }
duct = "0.13.7"

# age
humantime = "2"
time = { version = "0.3", features = ["formatting", "local-offset", "parsing"] }

# names
rand = "0.8"

# clean
num-format = "0.4.4"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
