[package]
name = "xtool"
version = "0.0.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
anyhow = "1"
clap = { version = "4.5.13", features = ["derive"] }
duct = "0.13.7"

# names
rand = "0.8"

# clean
num-format = "0.4.4"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
