[package]
name = "snacks"
version = "0.0.0"
edition = "2021"
description = "🍿 A collection of small QoL scripts"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
duct = "0.13.7"
rand = "0.8"
toml = "0.8"
